Refactoring based on code review Update sequence diagram for journalforing Update oyeblikksbilde endpoint to return if document is journalfort Archive only relevant data sources for vedtak Include behovsvurdering, registering and CV data in document archive